--- a/bubble-springboot/bubble-springboot-web/pom.xml
+++ b/bubble-springboot/bubble-springboot-web/pom.xml
@@ -84,8 +84,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
-
-
+        <!--redis日志收集-->
+        <dependency>
+            <groupId>com.cwbase</groupId>
+            <artifactId>logback-redis-appender</artifactId>
+            <version>1.1.5</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
